# rdk-bluetooth_leAppMgr

./: CONTRIBUTING.md  Makefile.am  NOTICE  configure.ac
conf/: btrLeAppMgr.service  startBtrLeAppMgr.sh
include/: btrLeMgrBase.h  btrLeMgr_logger.h  btrLeMgr_type.h  btrLeMgr_utils.h  btrTileMgr.h
include/btrmgrif/: btrMgrIf.h
rpc/: lemgr_iarm_ext_if.cpp  lemgr_iarm_int_if.cpp  lemgr_iarm_interface.h
src/: Makefile.am  btrLeMgr.cpp  btrLeMgrBase.cpp  btrLeMgr_utils.cpp  btrTileMgr.cpp
src/btrmgrif/: btrMgrIf.cpp
tests/: Makefile.am  btrLeMgr_test.cpp
